# violet

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.org
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yaml  release.yaml
docs/: 404.html  CHANGELOG.md  Config.md  Design principles.md  Frontmatter.md  Generation system.md  Getting started.md  LICENSE  Markdown parser.md  Page lists.md  Project structure.md  README.md  RSS and atom feeds.md  Special pages.md  Taxonomies.md  Templating.md  Themes.md  violet.json
docs/partials/: head.inja
docs/schemas/: Frontmatter.md  listing.md  violet.md
docs/specs/: Markdown spec.md
docs/templating/: Project-local templates.md  README.md  Themes.md  Writing templates.md  datetime.md  files.md
docs/templating/functions/: README.md  datetime.md  files.md  html.md  lang.md
docs/themes/: Default.md
scripts/: publish.sh
src/: CMakeLists.txt
src/violet/: CommandLine.cpp  CommandLine.hpp  Main.cpp
src/violet/algorithm/: SortMethod.hpp
src/violet/conf/: Config.hpp  Frontmatter.hpp  ThemeConfig.hpp  ToJsonImpl.cpp
src/violet/data/: Constants.hpp  GenerateOpts.hpp  RenderRequest.hpp  VioletGlobal.hpp
src/violet/exceptions/: SyntaxError.hpp  TracedException.hpp
src/violet/generate/: FileManager.cpp  FileManager.hpp  ProcessedFileType.hpp  SiteGenerator.cpp  SiteGenerator.hpp
src/violet/generate/cache/: MetadataCache.hpp
src/violet/generate/templates/: DateTimeFunctions.cpp  DateTimeFunctions.hpp  FileFunctions.cpp  FileFunctions.hpp  HtmlFunctions.cpp  HtmlFunctions.hpp  InjaManager.cpp  InjaManager.hpp  LangFunctions.cpp  LangFunctions.hpp
src/violet/generate/templates/ext/: SafeCastEnum.hpp
src/violet/paginator/: Paginator.cpp  Paginator.hpp  SortPredicates.cpp  SortPredicates.hpp
src/violet/parsing/: DateTimeParsing.cpp  DateTimeParsing.hpp  Escaping.cpp  Escaping.hpp  LinkTranslate.hpp  Markdown.cpp  Markdown.hpp  URLParser.hpp
src/violet/parsing/markdown/: CommonDefs.hpp  ContextConsumingNodes.hpp  ContextProvidingNodes.hpp  DOMTree.hpp  DocumentContext.cpp  DocumentContext.hpp  ElementaryNodes.hpp  MetaNodes.hpp
src/violet/parsing/markdown/impl/: MetaParser.cpp  ParagraphParsing.cpp  ParserCore.cpp  Render.cpp
src/violet/parsing/markdown/output/: ContentDeclaration.hpp
src/violet/util/: LockStreamPos.hpp
tests/: CMakeLists.txt
tests/sites/test-blog/: .gitignore  README.md  violet.json
tests/sites/test-blog/assets/: style.css
tests/sites/test-blog/blog/: 2026-05-31-post1.md  2026-06-01-post2.md  2026-06-02-post3.md  README.md  feed.atom
tests/sites/test-site/: .gitignore  violet.json
tests/sites/test-site/a_folder/: file.md
tests/sites/test-site/secrets/: Secret.md
tests/sites/test-site/tests/inja/: formatDate.md
tests/sites/test-site/z_after_everything_else/: README.md
tests/src/: Main.cpp  SelfTests.cpp
tests/src/fixtures/: InjaArgsGenerator.hpp  LoadWorkspace.cpp  LoadWorkspace.hpp  TestSiteGenerator.cpp  TestSiteGenerator.hpp
tests/src/integration/: BasicSiteGenerationTests.cpp  BlogIntegrationTests.cpp
tests/src/parsing/: FootnoteTests.cpp  ListTests.cpp  MarkdownTests.cpp  QuoteTests.cpp  UrlTests.cpp  UrlTranslationTests.cpp
tests/src/parsing/ext/: SafeCastEnumTests.cpp
tests/src/parsing/markdown/: EscapingTests.cpp  HorizontalRuleTests.cpp  IDify.cpp  IDifyTests.cpp  ImageTests.cpp  TemplateParsing.cpp  ToCGenerationTests.cpp
tests/src/subtests/: FileListTests.hpp  README.md
tests/src/utils/: FileReader.cpp  FileReader.hpp  StringUtils.hpp
themes/: CMakeLists.txt
themes/_default/: violet.theme.json
themes/_default/_partials/: footer.inja  head.inja  header.inja  paginator.inja  tree_builder.inja
themes/_default/_templates/_default/: base.inja  page_list.inja  single_page.inja
themes/_default/assets/: _default_style.css
